# cappuccino

./: LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: ---------.md
cappuccino/: cappuccino.py
cappuccino/cms/db/: cappuccino.sqlite3  db.py
cappuccino/contents/markdowns/demo/: index.md
cappuccino/contents/markdowns/demo/contents/: greeting.md  sample.md
cappuccino/generator/: const.py  generator.py  memo.txt
cappuccino/output/demo/: index.html
cappuccino/output/demo/contents/: greeting.html
tests/: test_cappuccino.py
